# pdc-osti

./: .env-template  .gitignore  .pre-commit-config.yaml  README.md  dspace_entry_form.tsv  pdc_entry_form.tsv  pdc_form_input.tsv  pyproject.toml  setup.cfg
.github/workflows/: linting.yml  smoke-test.yaml
configs/: log_conf.yml
data/: dspace_metadata_to_upload.json  dspace_scrape.json  osti_scrape.json  pdc_metadata_to_upload.json  pdc_osti.json  pdc_scrape.json  redirects.json
src/pdc_osti/: __init__.py  commons.py  config.py  logger.py  poster.py  scraper.py
src/pdc_osti/models/: commons.py  main.py
